@@ -1,6 +1,9 @@
 Revision history for Plack-Middleware-Statsd
 
 {{$NEXT}}
+  [Bug Fixes]
+  - Fix bug with counting content types that contain dots, e.g.
+    "image/vnd.microsoft.icon".
 
 v0.3.3    2018-02-13 15:24:11+00:00 Europe/London
   [Documentation]
